# carla-simple-client

./: .gitignore  BUILDING.md  CMakeLists.txt  DIRECTORY_STRUCTURE.md  Makefile  README.md  pyproject.toml  setup.py  test_minimal.cpp
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  pr.yml  release.yml
LibCarla/cmake/: CMakeLists.txt
LibCarla/cmake/client/: CMakeLists.txt
LibCarla/source/carla/: Buffer.h  MsgPack.h  MsgPackAdaptors.h
LibCarla/source/carla/client/: WalkerAIController.cpp
LibCarla/source/carla/client/detail/: Simulator.cpp  Simulator.cpp.old  WalkerNavigation.cpp
LibCarla/source/carla/nav/: Navigation.cpp  WalkerManager.cpp
LibCarla/source/carla/road/: Map.cpp
LibCarla/source/carla/road/element/: Waypoint.cpp
PythonAPI/source/carla/: __init__.py  command.pyi  libcarla.pyi
PythonAPI/source/libcarla/: Actor.cpp  Sensor.cpp  libcarla.cpp
build-containers/x86_64-cross-arm64-ubuntu-22.04/: Dockerfile  arm-cross-compile-sources.list  build-arm64-deps.sh  jammy.source
build-containers/x86_64-native-ubuntu-22.04/: Dockerfile  README.md  build-native-examples.sh  docker-build.sh
carla/: __init__.py
cmake/: toolchain-arm64.cmake  toolchain-x86_64.cmake
examples/cpp_client/: CMakeLists.txt  cpp_client  main.cpp
examples/cpp_client_window/: CMakeLists.txt  main.cpp
examples/python_client/: README.md  example_client.py
examples/python_client_window/: example_client_window.py
scripts/: setup-dependencies.sh
tests/: __init__.py  test_carla.py
