[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake>=3.14", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "carla-client"
version = "0.9.16"
description = "Python client library for CARLA Simulator (ue4/0.9.16 branch)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daniel Glaser", email = "the78mole@gmail.com"},
]
maintainers = [
    {name = "Daniel Glaser", email = "the78mole@gmail.com"},
]
keywords = ["carla", "simulator", "autonomous-driving", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.19.0",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/the78mole/carla-simple-client"
Repository = "https://github.com/the78mole/carla-simple-client"
Issues = "https://github.com/the78mole/carla-simple-client/issues"
Documentation = "https://github.com/the78mole/carla-simple-client/blob/main/README.md"

[tool.setuptools]
packages = ["carla"]

[tool.setuptools.package-data]
carla = ["*.so", "*.dylib", "*.dll"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=carla --cov-report=term-missing"

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
manylinux-x86_64-image = "manylinux_2_35"
manylinux-aarch64-image = "manylinux_2_35"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
